docs/core/1.2/sysadmin_guide/configuring_sawtooth/xo_tp_configuration.md
---
title: XO Transaction Processor Configuration File
---

The XO transaction processor configuration file specifies the validator
endpoint connection to use.

If the config directory contains a file named `xo.toml`, the
configuration settings are applied when the transaction processor
starts. Specifying a command-line option will override the setting in
the configuration file.

::: note
::: title
Note
:::
:::

\<\<\<\<\<\<\<
HEAD:docs/core/1.1/sysadmin_guide/configuring_sawtooth/xo_tp_configuration.rst

> By default, the config directory is `/etc/sawtooth/`. See
> `path_configuration_file`{.interpreted-text role="doc"} for more
> information.

======= \>\>\>\>\>\>\>
core/1-2:docs/core/1.2/sysadmin_guide/configuring_sawtooth/xo_tp_configuration.rst

> By default, the config directory is `/etc/sawtooth/`. See
> `path_configuration_file`{.interpreted-text role="doc"} for more
> information.

An example configuration file is in the `sawtooth-sdk-python` repository
at
`https://github.com/hyperledger/sawtooth-sdk-python/blob/master/examples/xo_python/packaging/xo.toml.example`.
To create a XO transaction processor configuration file, download this
example file to the config directory and name it `xo.toml`. Set the
ownership and permissions to owner `root`, group `sawtooth`, and
permissions `640`. Then edit the file to change the example
configuration options as necessary for your system.

The `xo.toml` configuration file has the following option:

-   `connect` = \"[URL]{.title-ref}\"

    Identifies the URL of a running validator. Default:
    `tcp://localhost:4004`. For example:

    ``` none
    connect = "tcp://localhost:4004"
    ```
